--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -49,6 +49,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter Username"
+        android:textColor="@android:color/black"
+        android:textColorHint="@android:color/black"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_edit_text"
         app:layout_constraintTop_toBottomOf="@id/label_username"
@@ -73,6 +75,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter Email"
+        android:textColor="@android:color/black"
+        android:textColorHint="@android:color/black"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_edit_text"
         app:layout_constraintTop_toBottomOf="@id/label_email"
@@ -97,6 +101,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter Phone Number"
+        android:textColor="@android:color/black"
+        android:textColorHint="@android:color/black"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_edit_text"
         app:layout_constraintTop_toBottomOf="@id/label_phone"
