--- a/app/src/main/res/layout/activity_trisum.xml
+++ b/app/src/main/res/layout/activity_trisum.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="Trisum"
         android:textSize="24sp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/title_text_color"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:text="Trisumoffers a variety of premium spaces designed for your comfort and productivity. Explore our spaces and discover an ideal place for work, relaxation, and more."
         android:textSize="16sp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/description_text_color"
         android:lineSpacingExtra="4dp"
         app:layout_constraintTop_toBottomOf="@id/trisumImage"
         app:layout_constraintStart_toStartOf="parent"
