--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -60,7 +60,7 @@
                         android:layout_height="wrap_content"
                         android:text= "Simton Spaces"
                         android:textSize="18sp"
-                        android:textColor="#000000" />
+                        android:textColor="#4DA6FF" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -100,7 +100,7 @@
                             android:layout_height="wrap_content"
                             android:text="Trisum"
                             android:textSize="18sp"
-                            android:textColor="#000000" />
+                            android:textColor="#4DA6FF" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -133,7 +133,7 @@
                             android:layout_height="wrap_content"
                             android:text="Baba Dogo"
                             android:textSize="18sp"
-                            android:textColor="#000000" />
+                            android:textColor="#4DA6FF" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
