--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -53,129 +53,99 @@
 
             <!-- Card 1 -->
             <androidx.cardview.widget.CardView
+                android:id="@+id/simton"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
-                android:layout_columnSpan="1"
-                android:layout_rowSpan="1"
-                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
                 android:layout_margin="8dp"
                 app:cardElevation="4dp"
                 app:cardCornerRadius="8dp"
-                android:layout_columnWeight="1">
+                android:layout_gravity="fill"
+                android:onClick="onCardClick">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:padding="16dp">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:src="@drawable/simton"
+                    android:contentDescription="Simton Image"
+                    android:scaleType="centerCrop"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Card 1"
-                        android:textSize="18sp" />
+                        android:text="Simton"
+                        android:textSize="18sp"
+                        android:textColor="#4DA6FF"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <!-- Card 2 -->
             <androidx.cardview.widget.CardView
+                android:id="@+id/Trisum"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
-                android:layout_columnSpan="1"
-                android:layout_rowSpan="1"
-                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
                 android:layout_margin="8dp"
                 app:cardElevation="4dp"
                 app:cardCornerRadius="8dp"
-                android:layout_columnWeight="1">
+                android:layout_gravity="fill"
+                android:onClick="onCardClick">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:padding="16dp">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:src="@drawable/trisum"
+                    android:contentDescription="Trisum Image"
+                    android:scaleType="centerCrop"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Card 2"
-                        android:textSize="18sp" />
+                        android:text="Trisum"
+                        android:textSize="18sp"
+                        android:textColor="#4DA6FF"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <!-- Card 3 -->
             <androidx.cardview.widget.CardView
+                android:id="@+id/Babadogo"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
-                android:layout_columnSpan="1"
-                android:layout_rowSpan="1"
-                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
                 android:layout_margin="8dp"
                 app:cardElevation="4dp"
                 app:cardCornerRadius="8dp"
-                android:layout_columnWeight="1">
+                android:layout_gravity="fill"
+                android:onClick="onCardClick">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:padding="16dp">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:src="@drawable/babadogo"
+                    android:contentDescription="Babadogo Image"
+                    android:scaleType="centerCrop"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Card 3"
-                        android:textSize="18sp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <!-- Card 4 -->
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                android:layout_columnSpan="1"
-                android:layout_rowSpan="1"
-                android:layout_gravity="fill"
-                android:layout_margin="8dp"
-                app:cardElevation="4dp"
-                app:cardCornerRadius="8dp"
-                android:layout_columnWeight="1">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:padding="16dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Card 4"
-                        android:textSize="18sp" />
+                        android:text="Babadogo"
+                        android:textSize="18sp"
+                        android:textColor="#4DA6FF"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
         </GridLayout>
 
-        <!-- Side Menu Button to Open Drawer -->
-        <!--
-        <ImageButton
-            android:id="@+id/menu_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/ic_fifth"
-            android:contentDescription="Open Side Menu"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true" />
-        -->
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!-- Side Menu (Navigation Drawer) -->
-    <!--
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation_view"
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@android:color/white"
-        app:menu="@menu/menu_drawer"
-        android:layout_alignParentStart="true" />
-    -->
 
 </androidx.drawerlayout.widget.DrawerLayout>
