--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -2,11 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_settings"
-        android:title="Settings" />
+        android:title="Settings"
+        android:titleTextColor="#4DA6FF" />
     <item
         android:id="@+id/menu_edit_profile"
-        android:title="Edit Profile" />
+        android:title="Edit Profile"
+        android:titleTextColor="#4DA6FF" />
     <item
         android:id="@+id/menu_logout"
-        android:title="Log Out" />
+        android:title="Log Out"
+        android:titleTextColor="#4DA6FF" />
 </menu>
