--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,33 +8,28 @@
         android:orderInCategory="100"
         android:title="Settings"
         app:showAsAction="never"
-        app:iconTint="@android:color/white"
-        android:textColor="@android:color/white" /> <!-- Text color for this item -->
+        android:textColor="@color/menu_item_text_color" /> <!-- Reference the color selector -->
 
     <item
         android:id="@+id/nav_second_activity"
         android:title="My Houses"
         app:showAsAction="never"
-        app:iconTint="@android:color/white"
-        android:textColor="@android:color/white" /> <!-- Text color for this item -->
+        android:textColor="@color/menu_item_text_color" /> <!-- Reference the color selector -->
 
     <item
         android:id="@+id/nav_third_activity"
         android:title="Booked Spaces"
         app:showAsAction="never"
-        app:iconTint="@android:color/white"
-        android:textColor="@android:color/white" /> <!-- Text color for this item -->
+        android:textColor="@color/menu_item_text_color" /> <!-- Reference the color selector -->
 
     <item
         android:id="@+id/menu_settings"
         android:title="Settings"
-        app:iconTint="@android:color/white"
-        android:textColor="@android:color/white" /> <!-- Text color for this item -->
+        android:textColor="@color/menu_item_text_color" /> <!-- Reference the color selector -->
 
     <item
         android:id="@+id/menu_edit_profile"
         android:title="Edit Profile"
-        app:iconTint="@android:color/white"
-        android:textColor="@android:color/white" /> <!-- Text color for this item -->
+        android:textColor="@color/menu_item_text_color" /> <!-- Reference the color selector -->
 
 </menu>
