--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,7 +28,13 @@
     </style>
 
 
-    <style name="Theme.SplashScreen.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.SplashScreen.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColor">@color/purple_500</item> <!-- Set the text color -->
+        <item name="android:itemBackground">@color/black</item> <!-- Set the background color -->
+    </style>
 
-    <style name="Theme.SplashScreen.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.SplashScreen.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
+    <item name="android:textColor">@color/purple_500</item> <!-- Set the text color -->
+    <item name="android:itemBackground">@color/black</item> <!-- Set the background color -->
+</style>
 </resources>
